submission/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: theolenglart/frontend:submission
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health 
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
