submission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-api-deployment
  labels:
    app: feedback-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feedback-api
  template:
    metadata:
      labels:
        app: feedback-api
    spec:
      volumes:
      - name: sqlite-storage
        persistentVolumeClaim:
          claimName: feedback-api-pvc
      containers:
      - name: feedback-api
        image: theolenglart/feedback-api
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: sqlite-storage
          mountPath: /usr/db
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: feedback-api-service
spec:
  selector:
    app: feedback-api
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  labels:
    app: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: theolenglart/api-gateway
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logic-api-deployment
  labels:
    app: logic-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: logic-api
  template:
    metadata:
      labels:
        app: logic-api
    spec:
      containers:
      - name: logic-api
        image: theolenglart/logic-api
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: logic-api-service
spec:
  selector:
    app: logic-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: theolenglart/frontend
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentence-analyzer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway-service
            port:
              number: 8080

      - path: /admin(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: feedback-api-service
            port:
              number: 9000
