submission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:              
      - path: /api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway-service
            port:
              number: 8080

      - path: /admin/(feedback)
        pathType: ImplementationSpecific
        backend:
          service:
            name: feedback-api-service
            port:
              number: 9000

      # Exemple d'un autre endpoint admin
      # - path: /admin/(polarity)
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: logic-api-service
      #       port:
      #         number: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
